designing members adding page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_200">#296D98</color>
+    <color name="blueshade1">#0e2433</color>
+    <color name="blueshade2">#1C4966</color>
+    <color name="strokecolor" tools:overrise="true">#296D98</color>
 </resources>
