--- a/app/src/main/res/layout/activity_addmembers.xml
+++ b/app/src/main/res/layout/activity_addmembers.xml
@@ -24,6 +24,7 @@
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintl"
                 android:layout_width="match_parent"
                 android:layout_height="843dp"
                 android:paddingLeft="20dp">
@@ -40,10 +41,10 @@
                     app:hintTextColor="#00FFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.033"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.127"
+                    app:layout_constraintVertical_bias="0.107"
                     tools:layout_marginStart="40dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -193,9 +194,9 @@
                     android:layout_marginStart="-10dp"
                     android:text="Add Members"
                     android:textAlignment="center"
-                    android:textColor="#A600FF"
+                    android:textColor="#00DDFF"
                     android:textSize="34sp"
-                    android:textStyle="bold|italic"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.213"
@@ -204,7 +205,7 @@
                     app:layout_constraintVertical_bias="0.052" />
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/memberimage"
                     android:layout_width="156dp"
                     android:layout_height="138dp"
                     android:src="@drawable/common_google_signin_btn_icon_dark_normal"
