--- a/app/src/main/res/layout/activity_memberlist.xml
+++ b/app/src/main/res/layout/activity_memberlist.xml
@@ -6,17 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".Memberlist">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/flbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/memlist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.876"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.894"
-        app:rippleColor="#FF0000"
-        app:srcCompat="@drawable/baseline_add_24" />
+        app:layout_constraintVertical_bias="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
