--- a/app/src/main/res/layout/activity_addmembers.xml
+++ b/app/src/main/res/layout/activity_addmembers.xml
@@ -205,11 +205,14 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.052" />
 
-                <ImageView
+
+                <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/memberimage"
                     android:layout_width="156dp"
                     android:layout_height="138dp"
                     android:src="@drawable/common_google_signin_btn_icon_dark_normal"
+                    app:shapeAppearance="@style/CircularImageview"
+                    app:strokeColor="@color/blueshade1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -217,7 +220,10 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.855"
                     tools:src="@drawable/common_google_signin_btn_icon_dark_normal"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@tools:sample/avatars"
+                    />
+
+
 
                 <Button
                     android:id="@+id/chooseimg"
