Members and Complaints Recyclerview is created along with delete functionality

--- a/app/src/main/res/layout/activity_complaintlist.xml
+++ b/app/src/main/res/layout/activity_complaintlist.xml
@@ -8,7 +8,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/memrv"
+        android:id="@+id/complaintrv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/blueshade1"
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/flbutton"
+        android:id="@+id/flbuttoncomp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
