--- a/app/src/main/res/layout/activity_addmembers.xml
+++ b/app/src/main/res/layout/activity_addmembers.xml
@@ -31,7 +31,7 @@
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/namelayout"
+                    android:id="@+id/inputcompsub"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
@@ -69,7 +69,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/namelayout"
+                    app:layout_constraintTop_toBottomOf="@+id/inputcompsub"
                     app:layout_constraintVertical_bias="0.0"
                     tools:layout_marginStart="40dp">
 
@@ -208,21 +208,19 @@
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/memberimage"
-                    android:layout_width="156dp"
-                    android:layout_height="138dp"
+                    android:layout_width="154dp"
+                    android:layout_height="117dp"
                     android:src="@drawable/common_google_signin_btn_icon_dark_normal"
-                    app:shapeAppearance="@style/CircularImageview"
-                    app:strokeColor="@color/blueshade1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.855"
-                    tools:src="@drawable/common_google_signin_btn_icon_dark_normal"
-                    tools:srcCompat="@tools:sample/avatars"
-                    />
-
+                    app:shapeAppearance="@style/CircularImageview"
+                    app:strokeColor="@color/blueshade1"
+                    tools:src="@drawable/uploadfile"
+                    tools:srcCompat="@tools:sample/avatars" />
 
 
                 <Button
@@ -241,16 +239,17 @@
                     android:id="@+id/submitdata"
                     android:layout_width="245dp"
                     android:layout_height="54dp"
-                    android:text="Submit"
+                    android:text="submitdata"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.321"
+                    app:layout_constraintHorizontal_bias="0.41"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.949" />
+                    app:layout_constraintVertical_bias="0.964" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
